Navbar dropdown in mobile landscape going offscreen bug fix

--- a/css/master.css
+++ b/css/master.css
@@ -195,3 +195,9 @@ main {
     display: none !important;
   }
 }
+
+.navbar-nav > .dropdown {
+    max-height: 75vh;
+    height: auto;
+    overflow-x: hidden;
+}
